# mpc

./: CMakeLists.txt  README.md
cmake/: setup.cmake  setupDependencies.cmake
config/: config.json
include/: mpc_osqp.h
include/control/: control.h  pid.h  pure_pursuit.h
include/model/: vehicle.h
include/simulator/: simulator.h
include/utils/: utils.h
src/: main.cpp  mpc_osqp.cpp  mpc_osqp_main.cpp
src/control/: pid.cpp  pure_pursuit.cpp
src/model/: vehicle.cpp
src/simulator/: simulator.cpp
src/utils/: utils.cpp
